Gutter Width/Lafwidth als Custom Property zur Unterstützung von Plugins

--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -107,5 +107,9 @@
     --border-radius: #{$default-border-radius};
     --border-radius-buttons: #{$border-radius-buttons};
     --devider-height: #{$default-devider-height};
+    --width-gutter: #{$fau-gutter-width};
+    --width-gutter-half: #{$fau-gutter-halfwidth};
+    
+
 }
 
