--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -38,7 +38,7 @@
 	}
 	
 	.subtitle {
-	    margin: 1rem $fau-gutter-halfwidth;
+	    margin: 1rem var(--width-gutter-half, 15px);
 	    @media (min-width: $screen-sm) {
 		margin: 0 0 1rem 0;
 	    }
@@ -54,7 +54,8 @@
     }
 
     .portalmenu-oben {
-	margin-bottom: $fau-gutter-halfwidth;
+	margin-bottom: var(--width-gutter-half, 15px);
+	margin-top: $fau-gutter-thirdwidth;
     }
 }
 
