--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -147,8 +147,10 @@
 	.event-date {
 		margin: 0;
 		padding: 0.5rem 0;
-		min-height: 42px;
+		min-height: 50px;
 		min-width: 50px;
+		display: flex;
+		flex-direction: column;
 	}
 
 	.event-date-month {
