--- a/print.css
+++ b/print.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.15
+Version: 2.3.16-0
 Requires at least: 6.0
 Tested up to: 6.2
 Requires PHP: 8.0
