--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -13,42 +13,60 @@
 
 
 .slider-titel header a {
+	text-decoration: none !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    max-width: 100%;      
+    opacity: 1;
+    padding: 15px 35px;
+    font-weight: 700;
+    display: inline-block;
+    background-color: var(--color-Default);
+    border-radius: var(--border-radius, 0px);  
+    margin: 0 auto;
+    text-align: left;
 
-		text-decoration: none !important;
+	@media screen and (min-width: $screen-lg)  {
+	
+			-webkit-line-clamp: 1;
+			text-overflow: ellipsis;
+			-webkit-box-orient: horizontal;
+			white-space: nowrap;
+		}
+
+		@media screen and (min-width: $screen-md)  {
+	
+			-webkit-line-clamp: 1;
+			text-overflow: ellipsis;
+			-webkit-box-orient: horizontal;
+			white-space: nowrap;
+		}
+
+	@media screen and (min-resolution: 200dpi), screen and  (max-width: $screen-lg)  {
+	
+		-webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        white-space: normal;
+	}
+
+	@media (max-width: $screen-sm)  {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		display: -webkit-box;
-		-webkit-line-clamp: 1;
-		-webkit-box-orient: horizontal;
-		max-width: 100%;		
-		opacity: 1;
-		padding: 15px 35px;
-		white-space: nowrap;
-		font-weight: 700;
-		display: inline-block;
-
-		background-color: var(--color-Default);
-		border-radius: var(--border-radius, 0px);	
-		margin: 0 auto;
-		text-align: left;
-	
-		@media (max-width: $screen-sm)  {
-			overflow: hidden;
-			text-overflow: ellipsis;
-			display: -webkit-box;
-			-webkit-line-clamp: 2;
-			-webkit-box-orient: vertical;
-			height: 85px;
-			padding: 15px;
-		
-		
-			white-space: normal;
-			@media not all and (min-resolution:.001dpcm) { 
-				@supports (-webkit-appearance:none) {
-				  line-height: 1.5; /* Adjust line-height for Safari */
-				}
-			  }
-		 }
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		height: 85px;
+		padding: 15px;
+		white-space: normal;
+		@media not all and (min-resolution:.001dpcm) { 
+			@supports (-webkit-appearance:none) {
+			  line-height: 1.5; /* Adjust line-height for Safari */
+			}
+		  }
+	 }
 }
 
  
