--- a/style.css
+++ b/style.css
@@ -10883,17 +10883,39 @@ ol.breadcrumblist li:last-child::after {
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 1;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   max-width: 100%;
   opacity: 1;
   padding: 15px 35px;
-  white-space: nowrap;
   font-weight: 700;
   display: inline-block;
   background-color: var(--color-Default);
   border-radius: var(--border-radius, 0px);
   margin: 0 auto;
   text-align: left;
+}
+@media screen and (min-width: 1200px) {
+  .slider-titel header a {
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
+    -webkit-box-orient: horizontal;
+    white-space: nowrap;
+  }
+}
+@media screen and (min-width: 992px) {
+  .slider-titel header a {
+    -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
+    -webkit-box-orient: horizontal;
+    white-space: nowrap;
+  }
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2.0833333333333335), screen and (min-resolution: 200dpi), screen and (max-width: 1200px) {
+  .slider-titel header a {
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+  }
 }
 @media (max-width: 768px) {
   .slider-titel header a {
