--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -396,29 +396,28 @@ main .subpages-menu,
         }
     }
 
-}
-
-.listview {
-    display: flex;
-    gap: var(--width-gutter-half, 15px);
-    flex-wrap: wrap;
-
-    a {
-       // border-radius: var(--border-radius-buttons, 3px);
-        font-size: 0.937rem;
-        line-height: 1.407rem;
-        color: var(--color-Text, #222);
-        background-color: var(--color-MetaBackgroundLight, #DFE6EC);
-        padding: 0.5rem 1.8rem;     
-	&:focus,
-        &:hover {
-            text-decoration: none;
-            background-color: var(--color-menulink-hover-bg);
-            color: var(--color-menulink-hover-text);
+    &.listview {
+        display: flex;
+        gap: var(--width-gutter-half, 15px);
+        flex-wrap: wrap;
+    
+        a {
+           // border-radius: var(--border-radius-buttons, 3px);
+            font-size: 0.937rem;
+            line-height: 1.407rem;
+            color: var(--color-Text, #222);
+            background-color: var(--color-MetaBackgroundLight, #DFE6EC);
+            padding: 0.5rem 1.8rem;     
+        &:focus,
+            &:hover {
+                text-decoration: none;
+                background-color: var(--color-menulink-hover-bg);
+                color: var(--color-menulink-hover-text);
+            }
         }
-    }
-    @media (max-width: $screen-sm) {
-        padding-left: var(--width-gutter-half, 15px);
+        @media (max-width: $screen-sm) {
+            padding-left: var(--width-gutter-half, 15px);
+        }
     }
 }
 
