--- a/src/sass/structure/navigation/_portalmenus.scss
+++ b/src/sass/structure/navigation/_portalmenus.scss
@@ -419,6 +419,58 @@ main .subpages-menu,
             padding-left: var(--width-gutter-half, 15px);
         }
     }
+    &.meganav {
+        > ul {
+            column-count: 4;
+            display: block;
+            > li {
+                break-inside: avoid;
+                background: none;
+                box-shadow: none;
+                display: list-item;
+                > a {
+                    display: inline-block;
+                    font-weight: bold;
+                    padding: 7px 20px 7px 12px;
+                    width: 100%;
+                    &:hover {
+                        color: var(--color-mainmenu-sublevel-hover-text);
+                        background-color: var(--color-mainmenu-sublevel-bg);
+                        border-radius: 3px;
+                    }
+                }
+                > ul {
+                    border: none;
+                    > li {
+                        background: none;
+                        padding: 0;
+                        > a {
+                            display: inline-block;
+                            font-size: 0.875rem;
+                            line-height: 1.2rem;
+                            padding: 7px 20px 7px 12px !important;
+                            margin-top: 5px;
+                            width: 100%;
+                            &:hover {
+                                color: var(--color-mainmenu-sublevel-hover-text);
+                                background-color: var(--color-mainmenu-sublevel-bg);
+                                border-radius: 3px;
+                            }
+                        }
+                        &::before {
+                            display: none;
+                        }
+                    }
+                }
+            }
+            @media (max-width: $screen-sm) {
+                column-count: 2;
+            }
+            @media (max-width: $screen-xs) {
+                column-count: 1;
+            }
+        }
+    }
 }
 
 .hover-zoom a:hover img {
