--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -50,6 +50,8 @@
 		-webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         white-space: normal;
+		margin-top: -40px;
+		max-height: 125px;
 	}
 
 	@media (max-width: $screen-sm)  {
