--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -29,6 +29,10 @@
 		    @extend .fa;
 		    @extend .fa-tags;
 	}
+	.post-meta-videopost-author:before {
+		    @extend .fa;
+		    @extend .fa-pencil;
+	}
 	.post-meta-tags {
 	    @media (min-width: $screen-sm) {
 		margin-left: 10px;
@@ -100,6 +104,10 @@
 		    @extend .fa;
 		    @extend .fa-calendar;
 		}
+		.news-meta-videopost-author:before {
+		    @extend .fa;
+		    @extend .fa-pencil;
+		}
 	}
 	.news-meta-date {
 	   // margin-left: 10px;
@@ -168,7 +176,7 @@
 	    }
 	}
 	.thumbnailregion.vidpod-thumb {
-				.rrze-video {
+		.rrze-video {
 			margin: 0px !important;
 		}
 		.plyr__video-embed {
