--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -13,15 +13,26 @@
 
 
 .slider-titel header a {
-	text-decoration: none !important;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    text-decoration: none;
+    
+    
+//    overflow: hidden;
+//    text-overflow: ellipsis;
+// Notice: overflow hidden (und damit auch word-wrap: nowarp
+// sorgt für ein WCAG AA Problem und kann daher nicht verwendet werdne.
+// Falls der Text tatsächlich zu lang wird, muss das Design ihn trotzdem 
+// optisch darstellen
+// vgl: WCAG 2.1: Understanding Success Criterion 1.4.4: Resize text
+// Daher erstmal auskommentiert - WW, 28.06.2023
+
+    white-space: normal;
+
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     max-width: 100%;      
     opacity: 1;
-    padding: 15px 35px;
+    padding: var(--width-gutter-half, 15px) var(--width-gutter, 35px);
     font-weight: 700;
     display: inline-block;
     background-color: var(--color-primary-ci-hell);
@@ -30,53 +41,50 @@
     text-align: left;
 
 	@media screen and (min-width: $screen-lg)  {
-	
-			-webkit-line-clamp: 1;
-			text-overflow: ellipsis;
-			-webkit-box-orient: horizontal;
-			white-space: nowrap;
-		}
+	    -webkit-line-clamp: 1;
+//	    text-overflow: ellipsis;
+	    -webkit-box-orient: horizontal;
+//	    white-space: nowrap;
+	}
 
-		@media screen and (min-width: $screen-md)  {
-	
-			-webkit-line-clamp: 1;
-			text-overflow: ellipsis;
-			-webkit-box-orient: horizontal;
-			white-space: nowrap;
-		}
+	@media screen and (min-width: $screen-md)  {
+	    -webkit-line-clamp: 1;
+//	    text-overflow: ellipsis;
+	    -webkit-box-orient: horizontal;
+//	    white-space: nowrap;
+	}
 
 	@media screen and (min-resolution: 200dpi), screen and  (max-width: $screen-lg)  {
 	
-		-webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        white-space: normal;
-		margin-top: -40px;
-		max-height: 125px;
+	    -webkit-line-clamp: 2;
+	    -webkit-box-orient: vertical;
+	    white-space: normal;
+	    margin-top: -40px;
+	    max-height: 125px;
 	}
 
 	@media (max-width: $screen-sm)  {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		display: -webkit-box;
-		-webkit-line-clamp: 2;
-		-webkit-box-orient: vertical;
-		height: 85px;
-		padding: 15px;
-		white-space: normal;
-		@media not all and (min-resolution:.001dpcm) { 
-			@supports (-webkit-appearance:none) {
-			  line-height: 1.5; /* Adjust line-height for Safari */
-			}
-		  }
-		  @media screen and (min-resolution: 200dpi), screen and  (max-width: $screen-lg)  {
-	
-			-webkit-line-clamp: 2;
-			-webkit-box-orient: vertical;
-			white-space: normal;
-			margin-top: 0px;
-			max-height: 125px;
-		}
-	 }
+//	    overflow: hidden;
+//	    text-overflow: ellipsis;
+	    display: -webkit-box;
+	    -webkit-line-clamp: 2;
+	    -webkit-box-orient: vertical;
+	    height: 85px;
+	    padding: var(--width-gutter-half, 15px);
+	    white-space: normal;
+	    @media not all and (min-resolution:.001dpcm) { 
+		    @supports (-webkit-appearance:none) {
+		      line-height: 1.5; /* Adjust line-height for Safari */
+		    }
+	    }
+	    @media screen and (min-resolution: 200dpi), screen and  (max-width: $screen-lg)  {
+		    -webkit-line-clamp: 2;
+		    -webkit-box-orient: vertical;
+		    white-space: normal;
+		    margin-top: 0px;
+		    max-height: 125px;
+	    }
+	}
 }
 
  
@@ -107,20 +115,19 @@
 		.slider-titel {
 			text-align: left;
 			font-weight: 700;
-			font-size: 2.3rem;
-			&a,
-			&:hover{
+		//	font-size: 2.3rem;
+			@include px2rem($font-size-hero-slider-title-small);
 
-
-			}
 			@media (min-width: $screen-sm) {
 				margin-bottom: 5px;
+				@include px2rem($font-size-hero-slider-title);
 			}
 			@media (max-width: $screen-sm){
-				font-size: 24px;
+				// font-size: 24px;			
+				
 				height: 100px;
-				overflow: hidden;
-				top:5px;
+			//	overflow: hidden;
+				top: 5px;
 
 			}
 			header {
@@ -182,11 +189,11 @@
 			position: absolute;
 			bottom: 0;
 			right: 0;
-			overflow: hidden;
-			text-overflow: ellipsis;
+		//	overflow: hidden;
+		//	text-overflow: ellipsis;
 			display: -webkit-box;
 			-webkit-line-clamp: 1; /* number of lines to show */
-					line-clamp: 1; 
+			line-clamp: 1; 
 			-webkit-box-orient: vertical;
 			@media (max-width: $screen-sm) {
 				top: 0;
