Bugfix: Wenn jemand den SLider oder den Banner für alle Seiten, einschließlich Posts aktivierte, mussten die Post-Titles sichtbar werden, also den screen-reader-class loswerden. Ausserdem musste bei Posts im Falle vom Slider ein Margin-top eingebaut werden. Daher gibt es nun eine neue class bei dem div #content mit dem herotype

--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -234,17 +234,9 @@
       
     
     }
-
-    h1.mobiletitle {
-        margin-top: 0;
-        padding: 10px 0;
-        hyphens: auto;
-
-        @media (min-width: $screen-sm) {
-            @include sr-only();
-        }
+    .herotype-slider {
+	margin-top: var(--width-gutter, 30px);
     }
-
     .wp-caption {
         max-width: 100vw;
         padding: 0;
