--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -237,6 +237,12 @@
     .herotype-slider {
 	margin-top: var(--width-gutter, 30px);
     }
+    
+    .herotype-default {
+	h1.screen-reader-text {
+	    
+	}
+    }
     .wp-caption {
         max-width: 100vw;
         padding: 0;
